fix legend nowrap

--- a/gene_occasionnee/front/static/styles.css
+++ b/gene_occasionnee/front/static/styles.css
@@ -53,10 +53,8 @@ body {
 
   .chart-legend {
     font-size: 10px;
-    white-space: nowrap;
+    line-height: 1.5;
   }
-
-
 
   .date-filter-section {
     padding: 10px;
